--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@netlify/functions": "^2.6.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "handlebars": "^4.7.8",
     "nodemailer": "^6.9.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
